src/test/ui/hrtb/issue-62203-hrtb-ice.stderr
error[E0271]: type mismatch resolving `for<'r> <L<[closure@$DIR/issue-62203-hrtb-ice.rs:42:17: 42:39]> as T0<'r, (<Unit2 as Ty<'r>>::V,)>>::O == <_ as Ty<'r>>::V`
  --> $DIR/issue-62203-hrtb-ice.rs:38:19
   |
LL |     let v = Unit2.m(
   |                   ^ expected struct `Unit4`, found associated type
   |
   = note:       expected struct `Unit4`
           found associated type `<_ as Ty<'_>>::V`
   = help: consider constraining the associated type `<_ as Ty<'_>>::V` to `Unit4`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html

error[E0271]: type mismatch resolving `<[closure@$DIR/issue-62203-hrtb-ice.rs:42:17: 42:39] as std::ops::FnOnce<((&u8,),)>>::Output == Unit3`
  --> $DIR/issue-62203-hrtb-ice.rs:38:19
   |
LL |     let v = Unit2.m(
   |                   ^ expected struct `Unit4`, found struct `Unit3`
   |
   = note: required because of the requirements on the impl of `for<'r> T0<'r, (<Unit2 as Ty<'r>>::V,)>` for `L<[closure@$DIR/issue-62203-hrtb-ice.rs:42:17: 42:39]>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
